# hs-botocore

./: README.md  botocore.cabal  botocore.nix  flake.nix
.github/workflows/: haskell-ci.yml
src/: Botocore.hs
src/Botocore/: Paginators.hs  Service.hs  Waiters.hs
src/Botocore/Paginators/: Pagination.hs
src/Botocore/Service/: Authorizer.hs  ClientContextParam.hs  Metadata.hs  Operation.hs  Shape.hs  Types.hs
src/Botocore/Service/Authorizer/: Placement.hs
src/Botocore/Service/Metadata/: ProtocolSettings.hs
src/Botocore/Service/Operation/: Endpoint.hs  EndpointDiscovery.hs  Error.hs  Http.hs  HttpChecksum.hs  Input.hs  Output.hs  StaticContextParams.hs
src/Botocore/Service/Operation/Error/: Info.hs
src/Botocore/Service/Operation/Input/: XmlNamespace.hs
src/Botocore/Service/Shape/: Error.hs  Key.hs  ListMember.hs  Retryable.hs  StructMember.hs  Value.hs
src/Botocore/Service/Shape/StructMember/: ContextParam.hs
src/Botocore/Waiters/: Waiter.hs
src/Botocore/Waiters/Waiter/: Acceptor.hs
src/Data/Aeson/Decoding/Tokens/: Direct.hs
src/Data/Functor/Barbie/: Extended.hs  Record.hs
src/Data/Json/: InsertOrdered.hs
