cabal-version: 2.2
name:          botocore
version:       0.1.0.0
synopsis:      Representation of botocore types
description:
  This library provides types a precise parser for the "botocore"
  definitions of Amazon Web Services (AWS) service APIs.
homepage:      https://github.com/brendanhay/amazonka
bug-reports:   https://github.com/brendanhay/amazonka/issues
license:       BSD-3-Clause
license-file:  LICENSE
author:        Bellroy Tech Team <haskell@bellroy.com>
maintainer:    Bellroy Tech Team <haskell@bellroy.com>
copyright:     Copyright (c) 2023 Bellroy Pty Ltd
category:      AWS
build-type:    Simple
extra-doc-files:
  README.md

source-repository head
  type:     git
  location: git://github.com/bellroy/botocore.git

library
  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:
    -Wall -Wunused-packages -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  build-depends:
    , aeson         >=2.1.2.0  && <2.2  || ^>=2.2
    , barbies       ^>=2.0.5.0
    , barbies-th    ^>=0.1.10
    , base          >=4.14     && <4.18
    , containers    ^>=0.6.7
    , generic-lens  ^>=2.2.2.0
    , scientific    ^>=0.3.7.0
    , some          ^>=1.0.6
    , text          ^>=2.0

  exposed-modules:
    Botocore.Paginators
    Botocore.Paginators.Pagination
    Botocore.Service
    Botocore.Service.Authorizer
    Botocore.Service.Authorizer.Placement
    Botocore.Service.ClientContextParam
    Botocore.Service.Metadata
    Botocore.Service.Metadata.ProtocolSettings
    Botocore.Service.Operation
    Botocore.Service.Operation.Endpoint
    Botocore.Service.Operation.EndpointDiscovery
    Botocore.Service.Operation.Error
    Botocore.Service.Operation.Error.Info
    Botocore.Service.Operation.Http
    Botocore.Service.Operation.HttpChecksum
    Botocore.Service.Operation.Input
    Botocore.Service.Operation.Output
    Botocore.Service.Operation.StaticContextParams
    Botocore.Service.Shape
    Botocore.Service.Shape.Error
    Botocore.Service.Shape.Key
    Botocore.Service.Shape.ListMember
    Botocore.Service.Shape.Retryable
    Botocore.Service.Shape.StructMember
    Botocore.Service.Shape.StructMember.ContextParam
    Botocore.Service.Shape.Value
    Botocore.Service.Types
    Botocore.Waiters
    Botocore.Waiters.Waiter
    Botocore.Waiters.Waiter.Acceptor

  other-modules:
    Data.Aeson.Decoding.Tokens.Direct
    Data.Functor.Barbie.Extended
